Adding paddle objects and ball as well as positioning them

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ping Pong</title>
-
+	<link href="css/style.css" rel="stylesheet">
 	<script type='text/javascript' src='js/jquery-3.1.0.min.js'></script>
 	<script type='text/javascript' src='js/app.js'></script>
 </head>
@@ -12,6 +12,13 @@
 	<header>
 		<h1>Ping Pong</h1>
 	</header>
+	<div id="game">
+		<div id="playground">
+			<div id="paddleA" class="paddle"></div>
+			<div id="paddleB" class="paddle"></div>
+			<div id="ball"></div>
+		</div>
+	</div>
 	<footer>
 		This is an example of creating a Ping Pong Game.
 	</footer>
