adding collision feature, changing UI

--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
 
 <body>
 	<header>
-		<h1>Ping Pong</h1>
+		<h1 align="center">Ping Pong</h1>
 	</header>
-	<div id="game">
+	<div align="center" id="game">
 		<div id="playground">
 			<div id="paddleA" class="paddle"></div>
 			<div id="paddleB" class="paddle"></div>
 			<div id="ball"></div>
 		</div>
 	</div>
-	<footer>
-		This is an example of creating a Ping Pong Game.
-	</footer>
 </body>
 </html>
