--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<header>
 		<h1 align="center">Ping Pong</h1>
 	</header>
+	<div align="center" id="scoreboard">
+		<div class="score">Player A: <span id="scoreA">0</span></div>
+		<div class="score">Player B: <span id="scoreB">0</span></div>
+	</div>
 	<div align="center" id="game">
 		<div id="playground">
 			<div id="paddleA" class="paddle"></div>
