--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ping Pong</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<script type='text/javascript' src='js/jquery-3.1.0.min.js'></script>
 	<script type='text/javascript' src='js/app.js'></script>
@@ -10,12 +11,23 @@
 
 <body>
 	<header>
-		<h1 align="center">Ping Pong</h1>
+		<h1 align="center">Soccer Pong</h1>
 	</header>
-	<div align="center" id="scoreboard">
+	<!--div align="center" id="scoreboard">
 		<div class="score">Player A: <span id="scoreA">0</span></div>
 		<div class="score">Player B: <span id="scoreB">0</span></div>
-	</div>
+	</div-->
+	<div align="center" class="container-fluid" id="scoreboard">
+		<div class="text-left">Player A:</div>
+		<div class="text-right">Player B:</div>
+		<br>
+		<div class="text-left">
+        	<span id="scoreA">0</span>
+        </div>
+        <div class="text-right">
+        	<span id="scoreB">0</span>
+        </div>
+    </div>
 	<div align="center" id="game">
 		<div id="playground">
 			<div id="paddleA" class="paddle"></div>
