cleaning up code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Ping Pong</title>
+	<title>Soccer Pong</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<script type='text/javascript' src='js/jquery-3.1.0.min.js'></script>
@@ -13,10 +13,6 @@
 	<header>
 		<h1 align="center" id="title">Soccer Pong</h1>
 	</header>
-	<!--div align="center" id="scoreboard">
-		<div class="score">Player A: <span id="scoreA">0</span></div>
-		<div class="score">Player B: <span id="scoreB">0</span></div>
-	</div-->
 	<div align="center" class="container-fluid" id="scoreboard">
 		<div id="player">
 				<p class="alignleft">Player A</p>
@@ -30,6 +26,7 @@
 	        <div style="clear: both;"></div>
         </div>
     </div>
+
     <br>
 	<div align="center" id="game">
 		<div id="playground">
